--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,6 @@
 <ion-tabs>
   <ion-tab [root]="tab1Root" [rootParams]="database_data" tabTitle="Home" tabIcon="home"></ion-tab>
-  <ion-tab [root]="tab2Root" [rootParams]="database_data" tabTitle="About" tabIcon="information-circle"></ion-tab>
-  <ion-tab [root]="tab3Root" [rootParams]="database_data" tabTitle="Contact" tabIcon="contacts"></ion-tab>
+  <ion-tab [root]="tab2Root" [rootParams]="database_data" tabTitle="Categories" tabIcon="logo-buffer"></ion-tab>
+  <ion-tab [root]="tab3Root" [rootParams]="database_data" tabTitle="Promote" tabIcon="attach"></ion-tab>
+  <ion-tab [root]="tab4Root" [rootParams]="database_data" tabTitle="Account" tabIcon="contact"></ion-tab>
 </ion-tabs>
