--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,7 +1,17 @@
 <ion-header>
-  <ion-navbar>
-    <ion-title>Home</ion-title>
-  </ion-navbar>
+  <ion-toolbar>
+    <ion-buttons start>
+    <button ion-button icon-only color="primary" (click)="openCalender()">
+        <ion-icon name="calendar"></ion-icon>
+      </button>
+    </ion-buttons>
+    <ion-title class="titledecoration">Huger Street</ion-title>
+    <ion-buttons end>
+      <button ion-button icon-only color="primary" (click)="openSearch()">
+        <ion-icon name="search"></ion-icon>
+      </button>
+    </ion-buttons>
+  </ion-toolbar>
 </ion-header>
 
 <ion-content padding>
