--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -22,12 +22,13 @@
       <td id="btnToday" (click)="slide(2)" style="width:33%">Today &#9733;</td>
     </tr>
   </table>
-  <ion-slides (ionSlideDidChange)="slideDidChange()" (ionSlideWillChange)="slideDidChange()">
-    <ion-slide>
-      <h1>test</h1>
-    </ion-slide>
-    <ion-slide>
-      <h1>test2</h1>
-    </ion-slide>
-  </ion-slides>
+  <div id="slide1" style="text-align:center">
+    <h1>test</h1>
+  </div>
+  <div id="slide2" style="text-align:center;display:none">
+    <h1>test2</h1>
+  </div>
+  <div id="slide3" style="text-align:center;display:none">
+    <h1>test3</h1>
+  </div>
 </ion-content>
