--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,4 +1,4 @@
-<ion-tabs>
+<ion-tabs color="primary">
   <ion-tab [root]="tab1Root" [rootParams]="database_data" tabTitle="Home" tabIcon="home"></ion-tab>
   <ion-tab [root]="tab2Root" [rootParams]="database_data" tabTitle="Categories" tabIcon="logo-buffer"></ion-tab>
   <ion-tab [root]="tab3Root" [rootParams]="database_data" tabTitle="Promote" tabIcon="attach"></ion-tab>
