--- a/src/pages/account/account.html
+++ b/src/pages/account/account.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="primary">
     <ion-title class="titledecoration">Account</ion-title>
     <ion-buttons end>
       <button ion-button icon-only (click)="goToSettingsPage()">
@@ -11,13 +11,23 @@
 
 
 <ion-content padding>
-  <h2>Welcome to Ionic!</h2>
-  <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
-  </p>
-  <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
-  </p>
+  <form (submit)="doSignIn()">
+    <ion-list inset padding>
+
+      <ion-item>
+        <ion-label stacked>Username</ion-label>
+        <ion-input type="text" [(ngModel)]="username" name="username"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label stacked>Password</ion-label>
+        <ion-input type="password" [(ngModel)]="password" name="password"></ion-input>
+      </ion-item>
+      
+      <div padding>
+        <button ion-button color="secondary" block>Login</button>
+        <p style="text-align: center">Don't have an acccount? <a [navPush]="registerPage">Signup</a></p>
+      </div>
+
+    </ion-list>
+    </form>
 </ion-content>
