changed button to secondary color

--- a/src/pages/promote/promote.html
+++ b/src/pages/promote/promote.html
@@ -42,7 +42,7 @@
     </ion-item>
 
     <ion-item>
-      <button ion-button (click)="launchLocationPage()">Choose Location</button>
+      <button ion-button color="secondary" (click)="launchLocationPage()">Choose Location</button>
     </ion-item>
 
     <ion-item>
