tweaks to promotion page

--- a/src/pages/promote/promote.html
+++ b/src/pages/promote/promote.html
@@ -43,6 +43,7 @@
 
     <ion-item>
       <button ion-button color="secondary" (click)="launchLocationPage()">Choose Location</button>
+      <div>{{location.name}}</div>
     </ion-item>
 
     <ion-item>
