--- a/src/pages/event/event.html
+++ b/src/pages/event/event.html
@@ -21,5 +21,6 @@
       </tr>
      </table>
   </div>
-  <button>Favorite</button>
+  <button (click)="doFavorite()">Favorite</button>
+  <button (click)="doAttend()">Attend</button>
 </ion-content>
