update to login and promote
+ promote page now pulls categories from the database
+ added facebook login functionality

--- a/src/pages/account/account.html
+++ b/src/pages/account/account.html
@@ -29,5 +29,10 @@
       </div>
 
     </ion-list>
-    </form>
+  </form>
+  <p style="text-align: center">OR</p>
+  <div padding>
+    <p style="text-align: center">Sign in with Facebook</p>
+    <button ion-button color="primary" (click)="doFacebookSignIn()" block>Facebook Login</button>
+  </div>
 </ion-content>
